[package]
name = "fix_fn"
version = "1.0.1"
authors = ["SrTobi <code.databyte@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Macro to create recursive closures (similar to the Y combinator)."
homepage = "https://crates.io/crates/fix_fn"
repository = "https://github.com/SrTobi/fix_fn"
readme = "readme.md"
keywords = ["recursion", "fixpoint", "y-combinator", "closure", "macro"]